[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-bvh"
description = "Bvh grammar for tree-sitter"
version = "0.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "bvh"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Stefan Webb", email = "info@stefanwebb.me" }]
requires-python = ">=3.10"
license.text = "CC BY-SA 4.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/stefanwebb/tree-sitter-bvh"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
